[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ooresults"
version = "0.4.5"
authors = [
  {name="Rainer Garus"},
]
description = "A software for the evaluation of the results of orienteering events"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Development Status :: 4 - Beta",
]
keywords = ["orienteering", "sportident"]
dependencies = [
    "bottle == 0.13.4",
    "case-converter",
    "cheroot >= 11.1.2",
    "clevercsv",
    "fastclasses-json",
    "fpdf2 == 2.6.1",
    "iso8601",
    "jsonschema",
    "lxml",
    "Mako == 1.3.10",
    "pyOpenSSL",
    "pyserial",
    "requests",
    "sireader",
    "tzlocal",
    "unidecode",
    "websocket-client",
    "websockets >= 14.2",
]


[project.optional-dependencies]
test = [
    "pytest >= 8.3.3",
    "pytest-asyncio >= 0.24.0",
    "selenium >= 4.26.1",
]

[project.scripts]
ooresults-server = "ooresults._server:main"
ooresults-reader = "ooresults._reader:main"

[project.urls]
Repository = "https://github.com/rgarus/ooresults"
Documentation = "https://ooresults.readthedocs.io/en/latest"
Changelog = "https://github.com/rgarus/ooresults/blob/main/CHANGELOG.rst"

[tool.setuptools]
packages = [
    "ooresults",
    "ooresults.handler",
    "ooresults.model",
    "ooresults.otypes",
    "ooresults.pdf",
    "ooresults.pdf.fonts",
    "ooresults.plugins",
    "ooresults.plugins.imports",
    "ooresults.plugins.imports.entries",
    "ooresults.repo",
    "ooresults.repo.update",
    "ooresults.schema",
    "ooresults.static",
    "ooresults.templates",
    "ooresults.templates.si",
    "ooresults.utils",
    "ooresults.websocket_server",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
required-version = "25"

[tool.isort]
profile = "black"
force_single_line = "true"
lines_after_imports = 2

[tool.ruff.lint]
select = ["C4", "D", "E", "F", "I", "PLC", "PLE", "PLW", "W"]
ignore = [
    # pycodestyle error ignore
    "E501",  # Line too long

    # pylint warning ignore
    "PLW0603",  # Using the global statement to update {name} is discouraged
    "PLW2901",  # Redefined loop name

    # pydocstyle ignore
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in `__init__`
    "D203",  # incorrect-blank-line-before-class - incompatible with D211
    "D213",  # multi-line-summary-second-line - incompatible with D212
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
