[options]
install_requires =
    web.py
    lxml
    requests
    sireader
    iso8601
    clevercsv
    jsonschema
    websocket-client
    websockets
    fpdf2 != 2.5.7
    pyserial
    tzlocal
    unidecode
    pyOpenSSL

packages =
    ooresults
    ooresults.handler
    ooresults.pdf
    ooresults.pdf.fonts
    ooresults.plugins
    ooresults.plugins.imports
    ooresults.plugins.imports.entries
    ooresults.repo
    ooresults.repo.update
    ooresults.schema
    ooresults.static
    ooresults.templates
    ooresults.templates.si
    ooresults.utils
    ooresults.websocket_server

include_package_data = True

[options.extras_require]
test =
    pytest
